feat: add docker files for both and docker compose to run application

--- a/backend/example.env
+++ b/backend/example.env
@@ -1,6 +1,6 @@
 PORT=3001
 
 DATABASE_SSL=false
-DATABASE_URL=postgresql://user:secret@localhost:5432/my_books_to_read
+DATABASE_URL=postgresql://postgres:secret@postgres:5432/postgres
 
 JWT_SECRET=super_secure_cookie_password
